add smaill task

--- a/front/myapp/src/app/home/menu/middle/new-task/new-task.component.html
+++ b/front/myapp/src/app/home/menu/middle/new-task/new-task.component.html
@@ -45,20 +45,21 @@
     <label class="custom-file-label" for="">Choose file...</label>
   </div>
 
-  <div class="container cardA row">
-    <div class="col">
+  <div class="container cardA ">
+    <div class="row col">
       <div class="h-50">Start date
         <input type="date" class="form-control" id="date" name="date" placeholder="Дата" required>
       </div>
     </div>
 
-  </div>
-  <div class="col">
+
+  <div class="row col ">
     <div>
       <div class="h-50">End date
         <input type="date" class="form-control" id="date2" name="date" placeholder="Дата" required>
       </div>
     </div>
+  </div>
   </div>
   <button (click)="goComponent('NewTasks')" type="button" class="btn btn-secondary cardA">Добавить</button>
 
