--- a/front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
+++ b/front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
@@ -19,15 +19,18 @@
 
 
 
-    <div >
+    <div class="cardA">
 
-      <label for="exampleFormControlInput1">Email</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" value="" required >
+      <label for="validationCustom02">Project name</label>
+      <input type="text" class="form-control" id="validationCustom02" placeholder="Project Name" value="" required>
 
     </div>
-    <div >
 
-      <label for="exampleFormControlInput1">Password</label>
+
+
+    <div class="cardA" >
+
+      <label for="exampleFormControlInput2">Password</label>
       <input type="password" class="form-control" id="exampleFormControlInput2" placeholder="" value="" required >
 
     </div>
