--- a/front/myapp/src/app/home/home.component.html
+++ b/front/myapp/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 <div class="fon">
+
+
   <div  class="bottonExit">
     <br>
     <button  (click)=" goComponent('Home/Login')" class="btn btn-primary  my-2 my-sm-0" type="submit">Выход</button>
@@ -8,9 +10,10 @@
       <div class=" col-md-3 colorcol3 ">
 <app-sidebar></app-sidebar>
       </div>
-      <div class="col-md-9 card-deck colorcol9">
-        <router-outlet>
-      </router-outlet>
+      <div class="col-md-9 colorcol9" >
+
+        <router-outlet ></router-outlet>
+
       </div>
     </div>
   </div>
