--- a/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -46,7 +46,7 @@
 
 
           <div class="progress card-title">
-            <div class="progress-bar"  [ngStyle]="{'width': data.progress + '%'}" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> выполнены таски</div>
+            <div class="progress-bar"  [ngStyle]="{'width': data.progress + '%'}" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">work with tasks</div>
           </div>
           <div class="progress card-title ">
             <div class="progress-barTime" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
