--- a/front/myapp/src/app/home/menu/middle/work-task/work-task.component.html
+++ b/front/myapp/src/app/home/menu/middle/work-task/work-task.component.html
@@ -1,15 +1,15 @@
 
 
 
-
-<div class="container-fluid">
-<table class="table table-dark">
-  <thead>
+<div class="h1 textColor">Progect name -d2</div>
+<div class="container" >
+<table class="table table-dark table-hover " >
+  <thead >
   <tr>
-    <th scope="col">id</th>
-    <th scope="col">Developer</th>
-    <th scope="col">Tester</th>
-    <th scope="col">progress</th>
+    <th scope="col-md-3">id</th>
+    <th scope="col-md-3">Developer</th>
+    <th scope="col-md-3">Tester</th>
+    <th scope="col-md-3">progress</th>
   </tr>
   </thead>
   <tbody>
