--- a/front/myapp/src/app/home/sidebar/sidebar.component.html
+++ b/front/myapp/src/app/home/sidebar/sidebar.component.html
@@ -1,11 +1,16 @@
-<div *ngIf="authService.isloggedIn" class="cardA container-fluid card-deck">
-  <div *ngFor="let  paths of service.paths;let i= number">
+<div   class="cardA container-fluid card-deck">
+  <div *ngFor="let  paths of service.paths;">
     <div class="row">
       <div class="col">
-        <div type="button" class="cardA card colorCard">
-          <a *ngIf="service.getIdiser()==paths.Role" (click)="goComponent(paths.nameRout)" class="btn">
+        <div *ngIf="service.getIdiser()==paths.Role" type="button" class="cardA card colorCard">
+
+          <a  (click)="goComponent(paths.nameRout)" class="btn">
             <div class="card-body">
+
+
               <h4 class="card-title">&rArr;{{paths.nameForm}}</h4>
+
+
             </div>
           </a>
         </div>
