add defender + exit

--- a/front/myapp/src/app/home/home.component.css
+++ b/front/myapp/src/app/home/home.component.css
@@ -1,4 +1,9 @@
 
+
+
+
+
+
 .formA{
 
 
@@ -6,7 +11,7 @@
 
 }
 
-
+.templeyt {  margin-top: 45%;}
 .colorcol3{
 
   background-color: rgba(255, 255, 255, 0);
