--- a/front/myapp/src/app/home/login/login.component.html
+++ b/front/myapp/src/app/home/login/login.component.html
@@ -1,9 +1,19 @@
 
-<div class="color form-group">
-  <form #loginForm="ngForm" (ngSubmit)="onFormSubmit(loginForm)">
-    <p>User Name: <input type='text'   class="form-control" name='username' ngModel></p>
-    <p>Password: <input type="password" class="form-control"  name="password" ngModel></p>
-    <p><button  type="submit" class="btn btn-primary">Submit</button></p>
-  </form>
+<div>
+<div class="modal-header">
+  <button type="button" class="close pull-right" aria-label="Close" (click)="modalServ.modalRef.hide()">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
+<div class="modal-body">
+  <h4 class="modal-title pull-left">Login to account</h4>
 
+  <div class="color form-group">
+    <form #loginForm="ngForm" (ngSubmit)="onFormSubmit(loginForm)" >
+      <p>User Name: <input type='text'   class="form-control" name='username' ngModel></p>
+      <p>Password: <input type="password" class="form-control"  name="password" ngModel></p>
+      <p><button  type="submit" class="btn btn-primary">Submit</button></p>
+    </form>
+  </div>
+</div>
+</div>
