--- a/front/myapp/src/app/home/menu/middle/new-task/new-task.component.html
+++ b/front/myapp/src/app/home/menu/middle/new-task/new-task.component.html
@@ -61,6 +61,6 @@
     </div>
   </div>
   </div>
-  <button (click)="goComponent('NewTasks')" type="button" class="btn btn-secondary cardA">Добавить</button>
+  <button (click)="service.goComponent('Home/ProjectView')" type="button" class="btn btn-secondary cardA">Добавить</button>
 
 </div>
