--- a/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -34,7 +34,7 @@
   </div>
   </div>
 </div>
-  <div *ngFor="let  data of Service.dataBase;let i= index" class="row cardA ">
+  <div *ngFor="let  data of service.dataBase;let i= index" class="row cardA ">
 
 
     <div class="card">
@@ -51,18 +51,20 @@
           <div class="progress card-title ">
             <div class="progress-barTime" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
           </div>
+
+
 <div class="card-body">
   <div class="row cardA">
-  <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">View Project</button>
+  <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work with the project</button>
   </div>
-  <div class="row cardA">
-  <button  class="btn botonCardColor" (click)="goComponent('Home/WorkTask')">Work with task</button>
-  </div>
+
 </div>
 
         </div>
       </a>
     </div>
+
+
     <div class="card">
       <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
       <!-- Текстовый контент href="" -->
@@ -79,11 +81,9 @@
           </div>
           <div class="card-body">
             <div class="row cardA">
-              <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">View Project</button>
+              <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work with the project</button>
             </div>
-            <div class="row cardA">
-              <button  class="btn botonCardColor" (click)="goComponent('Home/WorkTask')">Work with task</button>
-            </div>
+
           </div>
         </div>
       </a>
@@ -102,9 +102,9 @@
             <div class="progress-barTime" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
           </div>
 
-
-
-          <button  class="btn botonCardColor" (click)="goComponent('ProjectView')">Просмотр/Редактирование</button>
+          <div class="row cardA">
+            <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work with the project</button>
+          </div>
         </div>
       </a>
     </div>
