--- a/front/myapp/src/app/home/menu/middle/new-progect/new-progect.component.html
+++ b/front/myapp/src/app/home/menu/middle/new-progect/new-progect.component.html
@@ -41,6 +41,6 @@
     </div>
 </div>
   <div class="col-md-4 cardA ">
-    <button (click)="goComponent('Home/NewTasks')" type="button" class="btn btn-secondary cardA">Добавить</button>
+    <button (click)="service.goComponent('Home/ProjectView')" type="button" class="btn btn-secondary cardA">Добавить</button>
     </div>
 </div>
