--- a/front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
+++ b/front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
@@ -40,6 +40,6 @@
 
 
 <br>
-  <button (click)="goComponent('NewTasks')" type="button" class="btn btn-secondary cardA">Добавить</button>
+  <button (click)="goComponent('ProjectView')" type="button" class="btn btn-secondary cardA">Добавить</button>
 
 </div>
