--- a/front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
+++ b/front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
@@ -3,7 +3,7 @@
 
 
 
-  <table class="table">
+  <table class="table table-hover">
     <thead class="thead-light">
     <tr>
       <th scope="col">id</th>
@@ -15,7 +15,7 @@
     <tbody>
     <tr>
       <th scope="row">1</th>
-      <td><a href="#">Task1</a></td>
+      <td> <button type="button" class="btn  btn-outline-light"  (click)="modalServ._openModal(task)">Task1</button>
       <td><a href="#">Tom</a></td>
       <td> <div class="progress card-title cardA">
         <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td><a href="#">Task2</a></td>
+      <td> <button type="button" class="btn  btn-outline-light"  (click)="modalServ._openModal(task)">Task2</button>
       <td><a href="#">Tom</a></td>
       <td> <div class="progress card-title cardA">
         <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
@@ -31,12 +31,13 @@
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td><a href="#">Task3</a></td>
+      <td> <button type="button" class="btn  btn-outline-light"  (click)="modalServ._openModal(task)">Task3</button>
       <td><a href="#">Tom</a></td>
       <td> <div class="progress card-title cardA">
         <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
       </div></td>
     </tr>
+
     </tbody>
   </table>
 
@@ -116,3 +117,6 @@
 
 
 
+<ng-template #task >
+  <app-login ></app-login>
+</ng-template>
