--- a/front/myapp/src/app/home/menu/middle/work-task/work-task.component.css
+++ b/front/myapp/src/app/home/menu/middle/work-task/work-task.component.css
@@ -20,15 +20,15 @@
   flex: 1;
 }
 
-.textColor{
-  color: #e9ecef;
-}
+
 
 .table{
 
 }
 a {
+ /*
   color:#e9ecef;
+   */
   text-decoration: none;
   background-color: transparent;
 }
