--- a/front/myapp/src/app/home/sidebar/sidebar.component.css
+++ b/front/myapp/src/app/home/sidebar/sidebar.component.css
@@ -1,7 +1,11 @@
 .colorCard{
 
-  background-color:#ba1617;
+  background-color: #e3e6f1;
+/*
 color: #e9ecef;
+ */
+
+    font-family: "BIMINI";
 }
 
 
