--- a/front/myapp/src/app/home/home.component.html
+++ b/front/myapp/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <br>
 
 
-    <button type = "button" class = "btn btn-primary" (click) = "onLogin(templeyt)"> выход </button>
+    <button type = "button" class = "btn btn-dark" (click) = "onLogin(templeyt)"> выход </button>
 
 
   </div>
