--- a/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.css
+++ b/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.css
@@ -1,14 +1,20 @@
-
+.textColor{
+  /*
+  color: #e9ecef;
+   */
+}
 .progress-bar{
-background-color: #fc0707;
+background-color: #4e555b;
 }
 .coloCHek{
 
+ /*
   color: #e9ecef;
-
+   */
+  font-family: "ARIAL BLACK";
 }
 .progress-barTime{
-  background-color: #fc0707;
+  background-color: #006bff;
 }
 
 .progress{
