--- a/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -8,8 +8,8 @@
   <div class="container-fluid"><div class="row">
 
    <div class="col">
-  <button type="button " class="btn buttonColorHeader">&dArr;</button>
-  <button type="button" class="btn buttonColorHeader">&uArr;</button>
+  <button type="button " class="btn btn-dark">&dArr;</button>
+  <button type="button" class="btn btn-dark">&uArr;</button>
    </div>
     <div class="col coloCHek">
 
@@ -34,165 +34,32 @@
   </div>
   </div>
 </div>
-  <div *ngFor="let  data of service.dataBase;let i= index" class="row cardA ">
 
 
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a (click)="oncChange(data.id)"  class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Pgogect- {{data.title[i]}} {{i}}</h4>
 
 
-          <div class="progress card-title">
-            <div class="progress-bar"  [ngStyle]="{'width': data.progress + '%'}" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">work with tasks</div>
-          </div>
-          <div class="progress card-title ">
-            <div class="progress-barTime" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
-          </div>
-
-
-<div class="card-body">
-  <div class="row cardA">
-  <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work with the project</button>
-  </div>
-
-</div>
-
-        </div>
-      </a>
+<table class="table table-hover textColor">
+  <thead class="thead-light">
+  <tr>
+    <th scope="col">Project</th>
+    <th scope="col">Progress</th>
+    <th scope="col">Info</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let  data of service.dataBase   let i= index  "   class="cardA">
+    <th scope="row">{{data.title[i]}} {{i}}</th>
+    <td>
+      <div class="row cardA">
+        <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work with the project</button>
     </div>
-
-
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a (click)="oncChange(data.id)"  class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Pgogect- {{data.title[i]}} {{i}}</h4>
-
-
-          <div class="progress card-title">
-            <div class="progress-bar"  [ngStyle]="{'width': data.progress + '%'}" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> выполнены таски</div>
-          </div>
-          <div class="progress card-title">
-            <div class="progress-barTime" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
-          </div>
-          <div class="card-body">
-            <div class="row cardA">
-              <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work with the project</button>
-            </div>
-
-          </div>
-        </div>
-      </a>
+    </td>
+    <td>  <div class="progress card-title">
+      <div class="progress-bar"  [ngStyle]="{'width': data.progress + '%'}" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">work with tasks {{data.progress}}%</div>
     </div>
-
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a   class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Progect1</h4>
-          <div class="progress card-title">
-            <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35%</div>
-          </div>
-          <div class="progress card-title">
-            <div class="progress-barTime" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
-          </div>
-
-          <div class="row cardA">
-            <button  class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work with the project</button>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <!--
-
-  sdvffffffffffffffff-->
-  <div class="row cardA ">
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a  class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Progect1</h4>
-          <div class="progress card-title">
-            <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35%</div>
-          </div>
-          <a href="#" class="btn botonCardColor">Просмотр</a>
-        </div>
-      </a>
-    </div>
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a  class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Progect2</h4>
-          <div class="progress card-title">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-          </div>
-          <a href="#" class="btn botonCardColor">Просмотр</a>
-        </div>
-      </a>
-    </div>
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a  class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Progect3</h4>
-          <div class="progress card-title">
-            <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35%</div>
-          </div>
-          <a href="#" class="btn botonCardColor">Просмотр</a>
-        </div>
-      </a>
-    </div>
-  </div>
-
-  <div class="row cardA ">
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a  class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Progect1</h4>
-          <div class="progress card-title">
-            <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35%</div>
-          </div>
-          <a href="#" class="btn botonCardColor">Просмотр</a>
-        </div>
-      </a>
-    </div>
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a  class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Progect2</h4>
-          <div class="progress card-title">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-          </div>
-          <a href="#" class="btn botonCardColor">Просмотр</a>
-        </div>
-      </a>
-    </div>
-    <div class="card">
-      <!-- Шапка (bg-primary - цвет фона, text-white - цвет текста) -->
-      <!-- Текстовый контент href="" -->
-      <a  class="btn ">
-        <div class="card-body">
-          <h4 class="card-title">Progect3</h4>
-          <div class="progress card-title">
-            <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35%</div>
-          </div>
-          <a href="#" class="btn botonCardColor">Просмотр</a>
-        </div>
-      </a>
-    </div>
-  </div>
-
+      <div class="progress card-title ">
+        <div class="progress-barTime" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
+      </div></td>
+  </tr>
+  </tbody>
+</table>
