--- a/front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
+++ b/front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
@@ -9,13 +9,16 @@
       <th scope="col">id</th>
       <th scope="col">Tasks</th>
       <th scope="col">Developers</th>
+      <th scope="col">Tester</th>
+
       <th scope="col">Progress</th>
     </tr>
     </thead>
     <tbody>
     <tr>
       <th scope="row">1</th>
-      <td> <button type="button" class="btn  btn-outline-light"  (click)="modalServ._openModal(task)">Task1</button>
+      <td> <button type="button" class="btn  btn-dark"  (click)="modalServ._openModal(task)">Task1</button>
+      <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
       <td> <div class="progress card-title cardA">
         <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
@@ -23,16 +26,20 @@
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td> <button type="button" class="btn  btn-outline-light"  (click)="modalServ._openModal(task)">Task2</button>
+      <td> <button type="button" class="btn  btn-dark"  (click)="modalServ._openModal(task)">Task2</button>
       <td><a href="#">Tom</a></td>
+      <td><a href="#">Tom</a></td>
+
       <td> <div class="progress card-title cardA">
         <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
       </div></td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td> <button type="button" class="btn  btn-outline-light"  (click)="modalServ._openModal(task)">Task3</button>
+      <td> <button type="button" class="btn  btn-dark"  (click)="modalServ._openModal(task)">Task3</button>
       <td><a href="#">Tom</a></td>
+      <td><a href="#">Tom</a></td>
+
       <td> <div class="progress card-title cardA">
         <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
       </div></td>
@@ -74,8 +81,6 @@
       <label for="exampleFormControlTextarea3">Комментарии к задачи</label>
       <textarea class="form-control" id="exampleFormControlTextarea3" rows="3">В этом проекте главное это производительность </textarea>
     </div>
-
-
   </div>
 
 
@@ -118,5 +123,5 @@
 
 
 <ng-template #task >
-  <app-login ></app-login>
+  <app-task-work></app-task-work>
 </ng-template>
