--- a/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -1,15 +1,19 @@
 <!--
-
 *ngFor="let  data of Service.dataBase;let i= index"
 -->
 
 <div class="btn-group ">
 
-  <div class="container-fluid"><div class="row">
+  <div class="container-fluid">
+    <div class="row">
 
-   <div class="col">
-  <button type="button " class="btn btn-dark">&dArr;</button>
-  <button type="button" class="btn btn-dark">&uArr;</button>
+   <div class="row">
+    <div class="col">
+     <button type="button " class="btn btn-dark btnPadding">&dArr;</button>
+    </div>
+     <div class="col">
+     <button type="button" class="btn btn-dark">&uArr;</button>
+     </div>
    </div>
     <div class="col coloCHek">
 
@@ -26,10 +30,12 @@
       </div>
   </div>
 
-    <div class="col"><div class="">   <form class="form-inline">
+    <div class="col"><div class="">
+      <form class="form-inline">
       <input class="form-control " type="search" placeholder="Search" aria-label="Search">
     </form>
-    </div></div>
+    </div>
+    </div>
 
   </div>
   </div>
@@ -42,8 +48,8 @@
   <thead class="thead-light">
   <tr>
     <th scope="col">Project</th>
-    <th scope="col">Progress</th>
     <th scope="col">Info</th>
+    <th scope="col">Progress</th>
   </tr>
   </thead>
   <tbody>
@@ -58,7 +64,7 @@
       <div class="progress-bar"  [ngStyle]="{'width': data.progress + '%'}" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">work with tasks {{data.progress}}%</div>
     </div>
       <div class="progress card-title ">
-        <div class="progress-barTime" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
+        <div class="progress-barTime" role="progressbar" [ngStyle]="{'width': data.progress + '%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
       </div></td>
   </tr>
   </tbody>
