--- a/2front/myapp/src/app/home/modal/login/login.component.html
+++ b/2front/myapp/src/app/home/modal/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="container-fluid">
 <div class="modal-header">
   <button type="button" class="close pull-right" aria-label="Close" (click)="modalServ.modalRef.hide()">
     <span aria-hidden="true">&times;</span>
