--- a/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -39,21 +39,15 @@
 <div >
 <table class="table table-hover textColor">
   <thead class="thead-light">
-  <tr  *ngIf="1==service.getIdiser()||2==service.getIdiser()">
-    <th  scope="col">Project</th>
-    <th  scope="col"></th>
-    <th  scope="col">Progress</th>
-    <th scope="col"></th>
-  </tr>
-  <tr  *ngIf="3==service.getIdiser()||3==service.getIdiser()">
-    <th  scope="col">Tasks</th>
-    <th  scope="col"></th>
-    <th  scope="col">Progress</th>
-    <th scope="col"></th>
+  <tr>
+    <th  scope="col">{{table1}}</th>
+    <th  scope="col">{{table2}}</th>
+    <th  scope="col">{{table3}}</th>
+    <th scope="col">{{table4}}</th>
   </tr>
   </thead>
   <tbody>
- <tr *ngFor="let  data of service.dataBase   let i= index    "   class="cardA">
+ <tr *ngFor="let  data of service.dataBase   let i= index    "class="cardA">
     <th scope="row">{{data.title[i]}} {{i}}</th>
     <td>
       <div class="row cardA">
@@ -65,7 +59,7 @@
       <div class="progress-bar"  [ngStyle]="{'width': data.progress + '%'}" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">work with project {{data.progress}}%</div>
     </div>
       <div class="progress card-title ">
-        <div class="progress-barTime" role="progressbar" [ngStyle]="{'width': data.progress + '%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">время 	&#8986;</div>
+        <div class="progress-barTime" role="progressbar" [ngStyle]="{'width': data.progress + '%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">time 	&#8986;</div>
       </div>
    </td>
     <td *ngIf="1==service.getIdiser()" >
