--- a/2front/myapp/src/app/home/modal/task-work/task-work.component.html
+++ b/2front/myapp/src/app/home/modal/task-work/task-work.component.html
@@ -21,9 +21,9 @@
         </select>
         <div class="invalid-feedback">Example invalid custom select feedback</div>
       </div>
-
+<label for="rogressLable">Gravity user</label>
       <div> <div class="progress card-title cardA">
-        <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
+        <div id="rogressLable" class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
       </div>
 
       <div class="container cardA row">
@@ -41,8 +41,8 @@
       </div>
       </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1">Комментарии к задачи</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">Клиент любит помидоры</textarea>
+        <label for="exampleFormControlTextarea1">Сomments</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
     </div>
   </div>
