--- a/2front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
+++ b/2front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
@@ -34,6 +34,12 @@
       <input type="password" class="form-control" id="exampleFormControlInput2" placeholder="" value="" required >
 
     </div>
+    <div class="cardA" >
+
+      <label for="exampleFormControlInput1">Confirm password</label>
+      <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="" value="" required >
+
+    </div>
   </form>
 
 
@@ -41,5 +47,7 @@
 
 <br>
   <button (click)="goComponent('ProjectView')" type="button" class="btn btn-secondary cardA">Добавить</button>
+  <br>
+  <br>
 
 </div>
