--- a/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.css
+++ b/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.css
@@ -11,7 +11,7 @@
   background-color: #11110b;
 }
 
-.btn{
+.btnMyColor{
 /*
  color: #e9ecef;
   */
@@ -23,7 +23,7 @@ background-color: #11110b2e;
 
 
 }
-.btn{
+.btnMyColor{
   color: #1d2124;
 }
 .textColor{
