--- a/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
+++ b/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
@@ -1,9 +1,41 @@
+<div class="container row ">
+  <div class="col">
+  <button type="button" class="btn  btnMyColor btn-dark">Task status-></button>
+  <button type="button" class="btn btn-success">Start-></button>
+  <button type="button" class="btn btn-danger"> -></button>
+  <button type="button" class="btn btn-danger"> -></button>
+  <button type="button" class="btn btn-danger"> -></button>
+  <button type="button" class="btn btn-danger"> -></button>
+  <button type="button" class="btn btn-danger"> -></button>
+  </div>
+
+</div>
+
 <div class="container textColor" >
-  <div class="h2 cardA">Project page</div>
 
+  <div class="row">
+    <div class="col form-group cardA">
+      <label for="exampleFormControlInput1">Project name</label>
+      <select class="custom-select" required disabled>
+        <option value="">Project name</option>
+        <option value="1">Project59</option>
+        <option value="2">Project253</option>
+        <option value="3">Project2</option>
+      </select>
+      <div class="progress card-title cardA">
+        <div id="ollTask" class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% progress on all tasks</div>
+      </div>
+    </div>
+    <div class="col cardA" >
 
+      <label for="exampleFormControlInput1">Сustomer email</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" value="" required disabled>
 
-  <table class="table table-hover">
+    </div>
+
+  </div>
+
+  <table *ngIf="service.getIdiser()!=3" class="table table-hover">
     <thead class="thead-light">
     <tr>
       <th scope="col">id</th>
@@ -17,7 +49,7 @@
     <tbody>
     <tr>
       <th scope="row">1</th>
-      <td> <button type="button" class="btn  btn-dark"  (click)="modalServ._openModal(task)">Task1</button>
+      <td> <button type="button" class="btn btnMyColor btn-dark"  (click)="modalServ._openModal(task)">Task1</button>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
       <td> <div class="progress card-title cardA">
@@ -26,7 +58,7 @@
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td> <button type="button" class="btn  btn-dark"  (click)="modalServ._openModal(task)">Task2</button>
+      <td> <button type="button" class="btn btnMyColor btn-dark"  (click)="modalServ._openModal(task)">Task2</button>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
 
@@ -36,7 +68,7 @@
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td> <button type="button" class="btn  btn-dark"  (click)="modalServ._openModal(task)">Task3</button>
+      <td> <button type="button" class="btn btnMyColor btn-dark"  (click)="modalServ._openModal(task)">Task3</button>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
 
@@ -48,34 +80,31 @@
     </tbody>
   </table>
 
+  <div *ngIf="service.getIdiser()==3" class="container">
+    <label for="exampleFormControlInput5">Status</label>
+    <div class="row">
+      <div class="col">
 
+        <select id="exampleFormControlInput5" class="custom-select" required >
+          <option value="">--------</option>
+          <option value="1">In work</option>
+          <option value="2">Tested</option>
+          <option value="3">in the work of the tester</option>
+          <option value="4">Closed</option>
+        </select>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-success">Mark task</button>
+      </div>
+    </div>
+  </div>
 
 
   <div class=" <col-md-9 card-deck">
 
 
 <div class="container cardA">
-  <div class="row">
-    <div class="col form-group cardA">
-      <label for="exampleFormControlInput1">Project name</label>
-      <select class="custom-select" required disabled>
-        <option value="">Project name</option>
-        <option value="1">Project59</option>
-        <option value="2">Project253</option>
-        <option value="3">Project2</option>
-      </select>
-      <div class="progress card-title cardA">
-        <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% выполнены все таски</div>
-      </div>
-    </div>
-    <div class="col cardA" >
 
-      <label for="exampleFormControlInput1">Сustomer email</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" value="" required disabled>
-
-    </div>
-
-  </div>
   <div class="row">
     <div class="col form-group cardA">
       <label for="exampleFormControlTextarea3">Комментарии к задачи</label>
@@ -89,8 +118,6 @@
     <input type="file" class="custom-file-input" id="" required>
     <label class="custom-file-label" for="">Choose file...</label>
   </div>
-
-
 
   <div class="container cardA row">
 
@@ -118,6 +145,10 @@
 
 </div>
 </div>
+
+
+
+
 </div>
 
 
