--- a/2front/myapp/src/app/home/modal/task-work/task-work.component.html
+++ b/2front/myapp/src/app/home/modal/task-work/task-work.component.html
@@ -5,15 +5,37 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
+
   <div class="modal-body">
-    <h4 class="modal-title pull-left">Task-N123</h4>
+      <h4 class="modal-title pull-left">Task-N123</h4>
 
     <div class="color form-group">
-
-      <div class="form-group cardA">
-        <label for="custom-select">Developer</label>
-        <select id="custom-select" class="custom-select" required disabled>
-          <option value="3">Tom-id459</option>
+<div class="container row">
+  <div class="col">
+    <div class=" colform-group cardA">
+      <label for="custom-select1">Developer</label>
+      <select id="custom-select1" class="custom-select" required disabled>
+        <option value="3">Tom-id459</option>
+        <option value="">Developer</option>
+        <option value="1">Tom-id459</option>
+        <option value="2">Alex-id9253</option>
+        <option value="3">Ivan-id12</option>
+      </select>
+      <div class="invalid-feedback">Example invalid custom select feedback</div>
+    </div>
+    <label for="rogressLable1">Gravity Developer</label>
+    <div> <div class="progress card-title cardA">
+      <div id="rogressLable1" class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
+    </div>
+    </div>
+    <div class="">    <button (click)="goComponent('ProjectView')" type="button" class="btn btn-secondary cardA">Сhange Developer</button>
+    </div>
+  </div>
+  <div class="col">
+  <div class=" colform-group cardA">
+        <label for="custom-select2">Tester</label>
+        <select id="custom-select2" class="custom-select" required disabled>
+          <option value="3">Ivan-id459</option>
           <option value="">Developer</option>
           <option value="1">Tom-id459</option>
           <option value="2">Alex-id9253</option>
@@ -21,11 +43,16 @@
         </select>
         <div class="invalid-feedback">Example invalid custom select feedback</div>
       </div>
-<label for="rogressLable">Gravity user</label>
-      <div> <div class="progress card-title cardA">
-        <div id="rogressLable" class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
-      </div>
-
+    <label for="rogressLable">Gravity user</label>
+    <div> <div class="progress card-title cardA">
+      <div id="rogressLable" class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
+    </div>
+</div>
+  <div class="">    <button (click)="goComponent('ProjectView')" type="button" class="btn btn-secondary cardA">Сhange Tester</button>
+  </div>
+</div>
+</div>
+    <div>
       <div class="container cardA row">
         <div class="col">
           <div class="h-50">Start date
@@ -40,13 +67,18 @@
         </div>
       </div>
       </div>
+
       <div class="form-group">
         <label for="exampleFormControlTextarea1">Сomments</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
     </div>
-  </div>
+
+
+
+    </div>
 </div>
 </div>
+
 
 
