--- a/2front/myapp/src/app/home/menu/middle/work-task/work-task.component.html
+++ b/2front/myapp/src/app/home/menu/middle/work-task/work-task.component.html
@@ -4,7 +4,7 @@
   <thead >
   <tr>
     <th scope="col-md-3">id</th>
-    <th scope="col-md-3">Developer</th>
+    <th scope="col-md-3">Executor</th>
     <th scope="col-md-3">Tester</th>
     <th scope="col-md-3">progress</th>
   </tr>
