--- a/2front/myapp/src/app/home/sidebar/sidebar.component.html
+++ b/2front/myapp/src/app/home/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         <div *ngIf="service.getIdiser()==pathsSideBar.Role" type="button" class="cardA card colorCard">
           <a  (click)="service.goComponent(pathsSideBar.nameRout,pathsSideBar.booleanCheckOpenList)" class="btn">
             <div class="card-body">
-              <h4 class="card-title">&rArr;{{pathsSideBar.nameForm}}</h4>
+              <h4 class="card-title h4">&rArr;{{pathsSideBar.nameForm}}</h4>
             </div>
           </a>
         </div>
