--- a/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -2,73 +2,79 @@
 *ngFor="let  data of Service.dataBase;let i= index"
 -->
 
-<div class="btn-group ">
-  <div class="container-fluid">
-    <div class="row">
-   <div class="row">
-    <div class="col">
-     <button type="button " class="btn btn-dark btnPadding">&dArr;</button>
-    </div>
-     <div class="col">
-     <button type="button" class="btn btn-dark">&uArr;</button>
-     </div>
-   </div>
-    <div class="col coloCHek">
-
-      <div class="form-check">
-        <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-   по  дате
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">по времени
-        </label>
-      </div>
+<div class="row">
+  <div class="col">
+    <button (click)="modalServ._openModal(sorting)" type="button " class="btn btn-dark btn-outline-secondary">&rArr;Sorting</button>
   </div>
-    <div class="col"><div class="">
-      <form class="form-inline">
+  <div class="col">
+    <form class="form-inline">
       <input class="form-control " type="search" placeholder="Search" aria-label="Search">
     </form>
+  </div>
+
+  <div *ngIf="service.getIdiser()==(1||2)" class="col">
+      <select class="custom-select" >
+        <option value="0">Open</option>
+        <option value="1">InProgress</option>
+        <option value="2">Ressolved</option>
+        <option value="3">Reopend</option>
+        <option value="4">Closed</option>
+      </select>
+  </div>
+  <div class="row">
+    <div class="col">
+      <button type="button " class="btn btn-dark btnPadding">&dArr;</button>
     </div>
+    <div class="col">
+      <button type="button" class="btn btn-dark">&uArr;</button>
     </div>
   </div>
+  <div class="col coloCHek">
+
+    <div class="form-check">
+      <label class="form-check-label">
+        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+        по  дате
+      </label>
+    </div>
+    <div class="form-check">
+      <label class="form-check-label">
+        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">по времени
+      </label>
+    </div>
   </div>
 </div>
+
 <div >
 <table class="table table-hover textColor">
   <thead class="thead-light">
   <tr>
-    <th  scope="col">{{table1}}</th>
-    <th  scope="col">{{table2}}</th>
-    <th  scope="col">{{table3}}</th>
-    <th scope="col">{{table4}}
-    </th>
+    <th  scope="col h4">{{table1}}</th>
+    <th  scope="col h4">{{table2}}</th>
+    <th  scope="col h4">{{table3}}</th>
+    <th scope="col h4">{{table4}}</th>
   </tr>
   </thead>
   <tbody>
  <tr *ngFor="let  data of service.dataBase   let i= index    "class="cardA">
-    <th scope="row">{{data.title[i]}} {{i}}</th>
+    <th scope="row h5">{{data.title[i]}} {{i}}</th>
     <td>
       <div [ngSwitch]="service.flagUserList"  class="row cardA">
-        <button *ngSwitchCase="true" class="btn botonCardColor" (click)=modalServ._openModal(templeyt)>Settings</button>
-        <button *ngSwitchCase="false" class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work</button><!-- для попапа изерс-->
+        <button *ngSwitchCase="true" class="btn botonCardColor" (click)=modalServ._openModal(templeyt,true)>Settings</button>
+        <button *ngSwitchCase="false" class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work</button>
       </div>
     </td>
-
-   <td>  <div class="progress card-title">
-      <div class="progress-bar"  [ngStyle]="{'width': data.progress + '%'}" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">work with project {{data.progress}}%</div>
-    </div>
-      <div class="progress card-title ">
-        <div class="progress-barTime" role="progressbar" [ngStyle]="{'width': data.progress + '%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">time 	&#8986;</div>
-      </div>
+   <td>
+       <p class="h4">Open</p>
    </td>
     <td *ngIf="1==service.getIdiser()|| service.flagUserList" >
           <div  class="row cardA">
-            <button  class="btn btn-danger" >Delete</button>
+            <button (click)="modalServ.openXl(templeyt)"  class="btn btn-danger" >Delete</button>
           </div>
     </td>
+   <td *ngIf="service.getIdiser()==(3||4)">
+     <p class="h4">Comments</p>
+   </td>
   </tr>
   </tbody>
 </table>
