--- a/2front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
+++ b/2front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
@@ -1,11 +1,14 @@
 <div class="container color">
   <form class="was-validated cardA">
-    <div class="h4 cardA">New user</div>
+    <div class="h3">New user</div>
 
-
+    <div class="">
+      <label class="h6" for="validationCustom02">User name</label>
+      <input type="text" class="form-control" id="validationCustom02" placeholder="User name" value="" required>
+    </div>
 
     <div class="form-group cardA">
-      <label class="" for="custom-select">Role</label>
+      <label class="h6" for="custom-select">Role</label>
       <select ID="custom-select" class="custom-select" required>
         <option value="">Role</option>
         <option value="1">Developer</option>
@@ -16,27 +19,15 @@
     </div>
 
 
-
-
-
-    <div class="cardA">
-
-      <label for="validationCustom02">Project name</label>
-      <input type="text" class="form-control" id="validationCustom02" placeholder="Project Name" value="" required>
-
-    </div>
-
-
-
     <div class="cardA" >
 
-      <label for="exampleFormControlInput2">Password</label>
+      <label class="h6" for="exampleFormControlInput2">Password</label>
       <input type="password" class="form-control" id="exampleFormControlInput2" placeholder="" value="" required >
 
     </div>
     <div class="cardA" >
 
-      <label for="exampleFormControlInput1">Confirm password</label>
+      <label class="h6" for="exampleFormControlInput1">Confirm password</label>
       <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="" value="" required >
 
     </div>
