--- a/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
+++ b/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
@@ -1,104 +1,87 @@
-<div class="container row ">
-  <div class="col">
-  <button type="button" class="btn  btnMyColor btn-dark">Task status-></button>
-  <button type="button" class="btn btn-success">Start-></button>
-  <button type="button" class="btn btn-danger"> -></button>
-  <button type="button" class="btn btn-danger"> -></button>
-  <button type="button" class="btn btn-danger"> -></button>
-  <button type="button" class="btn btn-danger"> -></button>
-  <button type="button" class="btn btn-danger"> -></button>
-  </div>
-
-</div>
-
 <div class="container textColor" >
 
   <div class="row">
     <div class="col form-group cardA">
       <label for="exampleFormControlInput1">Project name</label>
-      <select class="custom-select" required disabled>
+      <select id="exampleFormControlInput1" class="custom-select" required disabled>
         <option value="">Project name</option>
         <option value="1">Project59</option>
         <option value="2">Project253</option>
         <option value="3">Project2</option>
       </select>
-      <div class="progress card-title cardA">
-        <div id="ollTask" class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% progress on all tasks</div>
-      </div>
     </div>
-    <div class="col cardA" >
-
-      <label for="exampleFormControlInput1">Сustomer email</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" value="" required disabled>
-
+    <div id="Priority" class="col form-group cardA" >
+      <label for="Priority">Status RFT</label>
+      <select class="custom-select" disabled >
+        <option value="0">Open</option>
+        <option value="1">InProgress</option>
+        <option value="2">Ressolved</option>
+        <option value="3">Reopend</option>
+        <option value="4">Closed</option>
+      </select>
+      <div class="invalid-feedback">Example invalid custom select feedback</div>
     </div>
-
   </div>
-
-  <table *ngIf="service.getIdiser()!=3" class="table table-hover">
+<div *ngIf="service.getIdiser()!=(3||4)" class="row">
+<div class="col">
+  <button (click)="modalServ._openModal(sorting)" type="button " class="btn btn-dark btn-outline-secondary">&rArr;Sorting</button>
+</div>
+  <div class="col">
+     <form class="form-inline">
+      <input class="form-control " type="search" placeholder="Search" aria-label="Search">
+    </form>
+  </div>
+  <div class="col">
+    <select  class="custom-select" required>
+      <option value="1">__________</option>
+      <option value="2">Closed</option>
+      <option value="3">In developing</option>
+      <option value="4">is open</option>
+    </select>
+  </div>
+  <div class="col">
+    <select  class="custom-select" required>
+      <option value="3">__________</option>
+      <option value="">Blocker</option>
+      <option value="1">Critical</option>
+      <option value="2">Major</option>
+      <option value="3">Trivial</option>
+    </select>
+  </div>
+</div>
+  <table *ngIf="service.getIdiser()!=(3||4)" class="table table-hover">
     <thead class="thead-light">
     <tr>
-      <th scope="col">id</th>
-      <th scope="col">Tasks</th>
-      <th scope="col">Developers</th>
-      <th scope="col">Tester</th>
+      <th scope="col">Tasks </th>
+      <th scope="col">Executor</th>
+      <th scope="col">Status</th>
+      <th scope="col">Priority</th>
 
-      <th scope="col">Progress</th>
     </tr>
     </thead>
     <tbody>
     <tr>
-      <th scope="row">1</th>
       <td> <button type="button" class="btn btnMyColor btn-dark"  (click)="modalServ._openModal(task)">Task1</button>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
-      <td> <div class="progress card-title cardA">
-        <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
-      </div></td>
+      <td><a href="#">Priority</a></td>
+
     </tr>
     <tr>
-      <th scope="row">2</th>
       <td> <button type="button" class="btn btnMyColor btn-dark"  (click)="modalServ._openModal(task)">Task2</button>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
+      <td><a href="#">Priority</a></td>
 
-      <td> <div class="progress card-title cardA">
-        <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
-      </div></td>
     </tr>
     <tr>
-      <th scope="row">3</th>
       <td> <button type="button" class="btn btnMyColor btn-dark"  (click)="modalServ._openModal(task)">Task3</button>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
-
-      <td> <div class="progress card-title cardA">
-        <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
-      </div></td>
+      <td><a href="#">Priority</a></td>
     </tr>
-
     </tbody>
   </table>
-
-  <div *ngIf="service.getIdiser()==3" class="container">
-    <label for="exampleFormControlInput5">Status</label>
-    <div class="row">
-      <div class="col">
-
-        <select id="exampleFormControlInput5" class="custom-select" required >
-          <option value="">--------</option>
-          <option value="1">In work</option>
-          <option value="2">Tested</option>
-          <option value="3">in the work of the tester</option>
-          <option value="4">Closed</option>
-        </select>
-      </div>
-      <div class="col">
-        <button type="button" class="btn btn-success">Mark task</button>
-      </div>
-    </div>
-  </div>
-
 
   <div class=" <col-md-9 card-deck">
 
@@ -107,8 +90,8 @@
 
   <div class="row">
     <div class="col form-group cardA">
-      <label for="exampleFormControlTextarea3">Комментарии к задачи</label>
-      <textarea class="form-control" id="exampleFormControlTextarea3" rows="3">В этом проекте главное это производительность </textarea>
+      <label for="exampleFormControlTextarea3">Summary</label>
+      <textarea class="form-control" id="exampleFormControlTextarea3" rows="3"></textarea>
     </div>
   </div>
 
@@ -152,6 +135,8 @@
 </div>
 
 
+<ng-template #sorting >
+</ng-template>
 
 <ng-template #task >
   <app-task-work></app-task-work>
