--- a/2front/myapp/src/app/home/menu/middle/new-progect/new-progect.component.html
+++ b/2front/myapp/src/app/home/menu/middle/new-progect/new-progect.component.html
@@ -3,17 +3,14 @@
 <div class="h4 cardA">New project</div>
 <div>
 
-  <label for="validationCustom02">Project name</label>
+  <label class="h5" for="validationCustom02">Project name</label>
   <input type="text" class="form-control" id="validationCustom02" placeholder="Project Name" value="" required>
 
 </div>
-  <div id="Priority" class="form-group cardA">
-    <label for="Priority">Status RFT</label>
+  <div id="Priority" class="form-group cardA" >
+    <label class="h5" for="Priority">Status RFT</label>
     <select class="custom-select" >
       <option value="0">Open</option>
-      <option value="1">InProgress</option>
-      <option value="2">Ressolved</option>
-      <option value="3">Reopend</option>
       <option value="4">Closed</option>
     </select>
     <div class="invalid-feedback">Example invalid custom select feedback</div>
@@ -21,14 +18,14 @@
 
 </form>
   <div class="form-group">
-    <label for="exampleFormControlTextarea1">Комментарии к проекту</label>
+    <label class="h5" for="exampleFormControlTextarea1">Комментарии к проекту</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
 
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="" required>
-    <label class="custom-file-label" for="">Choose file...</label>
-  </div>
+
+  <input class="btn-dark" type="file"  onchange="showFile(this)">
+
+
 
 <div class="container cardA row">
     <div class="col">
@@ -50,3 +47,4 @@
     <button (click)="service.goComponent('Home/ProjectView')" type="button" class="btn btn-secondary cardA">Добавить</button>
     </div>
 </div>
+
