--- a/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
+++ b/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
@@ -2,8 +2,8 @@
 
   <div class="row">
     <div class="col form-group cardA">
-      <label for="exampleFormControlInput1">Project name</label>
-      <select id="exampleFormControlInput1" class="custom-select" required disabled>
+      <label for="exampleFormControlInput1" class="h4">Project name</label>
+      <select id="exampleFormControlInput1" class="custom-select h5" required disabled>
         <option value="">Project name</option>
         <option value="1">Project59</option>
         <option value="2">Project253</option>
@@ -11,7 +11,7 @@
       </select>
     </div>
     <div id="Priority" class="col form-group cardA" >
-      <label for="Priority">Status RFT</label>
+      <label class="h5" for="Priority">Status RFT</label>
       <select class="custom-select" disabled >
         <option value="0">Open</option>
         <option value="1">InProgress</option>
@@ -22,40 +22,35 @@
       <div class="invalid-feedback">Example invalid custom select feedback</div>
     </div>
   </div>
-<div *ngIf="service.getIdiser()!=(3||4)" class="row">
-<div class="col">
-  <button (click)="modalServ._openModal(sorting)" type="button " class="btn btn-dark btn-outline-secondary">&rArr;Sorting</button>
-</div>
-  <div class="col">
-     <form class="form-inline">
-      <input class="form-control " type="search" placeholder="Search" aria-label="Search">
-    </form>
-  </div>
-  <div class="col">
-    <select  class="custom-select" required>
+
+  <table *ngIf="service.getIdiser()!=(3||4)" class="table table-hover ">
+  <thead class="table-light  ">
+  <tr>
+    <th scope="col"><button (click)="modalServ._openModal(sorting)" type="button " class="btn btn-dark btn-outline-secondary">&rArr;Sorting</button></th>
+    <th scope="col"> <form class="form-inline"><input class="form-control " type="search" placeholder="Search" aria-label="Search"></form></th>
+    <th scope="col">    <select  class="custom-select" required>
       <option value="1">__________</option>
       <option value="2">Closed</option>
-      <option value="3">In developing</option>
-      <option value="4">is open</option>
-    </select>
-  </div>
-  <div class="col">
-    <select  class="custom-select" required>
+      <option value="3">Returned task</option>
+      <option value="4">In developing</option>
+      <option value="5">is open</option>
+    </select></th>
+    <th scope="col">    <select  class="custom-select" required>
       <option value="3">__________</option>
       <option value="">Blocker</option>
       <option value="1">Critical</option>
       <option value="2">Major</option>
       <option value="3">Trivial</option>
-    </select>
-  </div>
-</div>
-  <table *ngIf="service.getIdiser()!=(3||4)" class="table table-hover">
+    </select></th>
+  </tr>
+  </thead>
     <thead class="thead-light">
     <tr>
-      <th scope="col">Tasks </th>
-      <th scope="col">Executor</th>
-      <th scope="col">Status</th>
-      <th scope="col">Priority</th>
+      <th scope="col h6">Tasks </th>
+      <th scope="col h6">Executor</th>
+      <th scope="col h6">Status</th>
+      <th scope="col h6">Priority</th>
+      <th scope="col h6">Option</th>
 
     </tr>
     </thead>
@@ -65,21 +60,36 @@
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Priority</a></td>
-
+      <td  >
+        <div  class="row cardA">
+          <button (click)="modalServ.openXl(templeyt)"  class="btn btn-danger" >Delete</button>
+        </div>
+      </td>
     </tr>
     <tr>
       <td> <button type="button" class="btn btnMyColor btn-dark"  (click)="modalServ._openModal(task)">Task2</button>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Priority</a></td>
-
+      <td  >
+        <div  class="row cardA">
+          <button (click)="modalServ.openXl(templeyt)"  class="btn btn-danger" >Delete</button>
+          <button (click)="modalServ.openLgCentered(content)" type="button" class="btn btn-secondary cardA">Render</button>
+        </div>
+      </td>
     </tr>
     <tr>
       <td> <button type="button" class="btn btnMyColor btn-dark"  (click)="modalServ._openModal(task)">Task3</button>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Tom</a></td>
       <td><a href="#">Priority</a></td>
+      <td  >
+        <div  class="row cardA">
+          <button (click)="modalServ.openXl(templeyt)"  class="btn btn-danger" >Delete</button>
+        </div>
+      </td>
     </tr>
+
     </tbody>
   </table>
 
@@ -90,7 +100,7 @@
 
   <div class="row">
     <div class="col form-group cardA">
-      <label for="exampleFormControlTextarea3">Summary</label>
+      <label for="exampleFormControlTextarea3" class="h5">Summary</label>
       <textarea class="form-control" id="exampleFormControlTextarea3" rows="3"></textarea>
     </div>
   </div>
@@ -99,7 +109,7 @@
 
   <div class="custom-file">
     <input type="file" class="custom-file-input" id="" required>
-    <label class="custom-file-label" for="">Choose file...</label>
+    <label class="custom-file-label h5" for="">Choose file...</label>
   </div>
 
   <div class="container cardA row">
@@ -141,3 +151,8 @@
 <ng-template #task >
   <app-task-work></app-task-work>
 </ng-template>
+
+<ng-template  #content let-modal   >
+  <app-add-executer [title]="modal"></app-add-executer>
+</ng-template>
+
