add logiga flapi

--- a/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -3,7 +3,7 @@
 -->
 <div class="row">
   <div class="col">
-    <button (click)="modalServ._openModal(sorting)" type="button " class="btn btn-dark btn-outline-secondary">&rArr;Sorting</button>
+    <button (click)="modalServ._openModal(sorting)" type="button "  class="btn btn-secondary">&rArr;Sorting</button>
   </div>
   <div class="col">
     <form class="form-inline">
