--- a/2front/myapp/src/app/home/menu/middle/new-progect/new-progect.component.html
+++ b/2front/myapp/src/app/home/menu/middle/new-progect/new-progect.component.html
@@ -44,7 +44,7 @@
 </div>
 
   <div class="col-md-4 cardA ">
-    <button (click)="service.goComponent('Home/ProjectView')" type="button" class="btn btn-secondary cardA">Добавить</button>
+    <button (click)="service.goComponent('Home/ProjectView')" type="button" class="btn btn-secondary cardA">Add</button>
     </div>
 </div>
 
