--- a/2front/myapp/src/app/home/menu/middle/new-task/new-task.component.html
+++ b/2front/myapp/src/app/home/menu/middle/new-task/new-task.component.html
@@ -1,7 +1,6 @@
 <div class="container textColor">
   <form class="was-validated cardA">
-    <div class=" h4 cardA">New task</div>
-
+      <div class="col h4 cardA">New task</div>
 
     <div class="row">
       <div class="col">
@@ -108,8 +107,8 @@
       </div>
     </div>
   </div>
-  <button (click)="service.goComponent('Home/ProjectView')" type="button" class="btn btn-secondary cardA">Добавить</button>
-  <button (click)="modalServ.openLgCentered(content)" type="button" class="btn btn-secondary cardA">Render</button>
+  <button (click)="service.goComponent('Home/ProjectView')" type="button" class=" btn btn-secondary cardA ">Add</button>
+  <button (click)="modalServ.openLgCentered(content)" type="button" class=" btn btn-secondary cardA ">Add and render</button>
 </div>
 
 
