--- a/2front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
+++ b/2front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
@@ -37,7 +37,7 @@
 
 
 <br>
-  <button (click)="goComponent('ProjectView')" type="button" class="btn btn-secondary cardA">Добавить</button>
+  <button (click)="goComponent('ProjectView')" type="button" class="btn btn-secondary cardA">Add</button>
   <br>
   <br>
 
