--- a/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
+++ b/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
@@ -26,7 +26,7 @@
   <table *ngIf="service.getIdiser()!=(3||4)" class="table table-hover ">
   <thead class="table-light  ">
   <tr>
-    <th scope="col"><button (click)="modalServ._openModal(sorting)" type="button " class="btn btn-dark btn-outline-secondary">&rArr;Sorting</button></th>
+    <th scope="col"><button (click)="modalServ._openModal(sorting)" type="button " class="btn btn-secondary">&rArr;Sorting</button></th>
     <th scope="col"> <form class="form-inline"><input class="form-control " type="search" placeholder="Search" aria-label="Search"></form></th>
     <th scope="col">    <select  class="custom-select" required>
       <option value="1">__________</option>
@@ -62,7 +62,9 @@
       <td><a href="#">Priority</a></td>
       <td  >
         <div  class="row cardA">
-          <button (click)="modalServ.openXl(templeyt)"  class="btn btn-danger" >Delete</button>
+          <button (click)="modalServ.openLgCentered(content)" type="button" class="col btn btn-danger ">Delete</button>
+          <button (click)="modalServ.openLgCentered(content)" type="button" class="col btn btn-secondary ">Render</button>
+          <button (click)="modalServ.openScrollableContent(history)" type="button" class="col btn btn-secondary ">History</button>
         </div>
       </td>
     </tr>
@@ -73,8 +75,9 @@
       <td><a href="#">Priority</a></td>
       <td  >
         <div  class="row cardA">
-          <button (click)="modalServ.openXl(templeyt)"  class="btn btn-danger" >Delete</button>
-          <button (click)="modalServ.openLgCentered(content)" type="button" class="btn btn-secondary cardA">Render</button>
+          <button (click)="modalServ.openLgCentered(content)" type="button" class="col btn btn-danger ">Delete</button>
+          <button (click)="modalServ.openLgCentered(content)" type="button" class="col btn btn-secondary ">Render</button>
+          <button (click)="modalServ.openScrollableContent(history)" type="button" class="col btn btn-secondary ">History</button>
         </div>
       </td>
     </tr>
@@ -85,11 +88,12 @@
       <td><a href="#">Priority</a></td>
       <td  >
         <div  class="row cardA">
-          <button (click)="modalServ.openXl(templeyt)"  class="btn btn-danger" >Delete</button>
+          <button (click)="modalServ.openLgCentered(content)" type="button" class="col btn btn-danger ">Delete</button>
+          <button (click)="modalServ.openLgCentered(content)" type="button" class="col btn btn-secondary ">Render</button>
+          <button (click)="modalServ.openScrollableContent(history)" type="button" class="col btn btn-secondary ">History</button>
         </div>
       </td>
     </tr>
-
     </tbody>
   </table>
 
@@ -118,7 +122,7 @@
     <div class="container cardA row">
 
       <div class="col">
-        <div class="h-50">Start date
+        <div class="h6">Start date
           <input type="date" class="form-control" id="date" name="date" placeholder="Дата" required disabled>
         </div>
       </div>
@@ -127,7 +131,7 @@
 
     <div class="col">
       <div>
-        <div class="h-50">End date
+        <div class="h6">End date
           <input type="date" class="form-control" id="date2" name="date" placeholder="Дата" required disabled>
         </div>
       </div>
@@ -156,3 +160,36 @@
   <app-add-executer [title]="modal"></app-add-executer>
 </ng-template>
 
+
+
+<ng-template #history let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">History</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
+    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
+    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
+    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
+    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
+    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+  </div>
+</ng-template>
