--- a/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -44,6 +44,14 @@
   </div>
 </div>
 
+
+
+    <app-table [Data]="allProject" [list]="['Projects','','Status RFT','','']"></app-table>
+
+
+<app-table [Data]="allUsers" [list]="['Projects','','Status RFT','','']"></app-table>
+
+
 <div >
 <table class="table table-hover textColor">
   <thead class="thead-light">
