--- a/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
+++ b/2front/myapp/src/app/home/menu/middle/project-view/project-view.component.html
@@ -62,9 +62,10 @@
       <td><a href="#">Priority</a></td>
       <td  >
         <div  class="row cardA">
-          <button (click)="modalServ.openLgCentered(content)" type="button" class="col btn btn-danger ">Delete</button>
-          <button (click)="modalServ.openLgCentered(content)" type="button" class="col btn btn-secondary ">Render</button>
-          <button (click)="modalServ.openScrollableContent(history)" type="button" class="col btn btn-secondary ">History</button>
+
+          <button (click)="modalServ.openLgCentered(content)" type="button" class=" btn btn-danger ">Delete</button>
+          <button (click)="modalServ.openLgCentered(content)" type="button" class=" btn btn-secondary ">Render</button>
+          <button (click)="modalServ.openScrollableContent(history)" type="button" class=" btn btn-secondary ">History</button>
         </div>
       </td>
     </tr>
